Test/Prop/Assoc.expected
goal: f p (f q r) = f (f p q) r

query:
(declare-fun f (Bool Bool) Bool)
(declare-const p Bool)
(declare-const q Bool)
(declare-const r Bool)
(assert (not (= (f p (f q r)) (f (f p q) r))))
(check-sat)

result: sat
Test/Prop/Assoc.lean:5:2: error: unable to prove goal, either it is false or you need to define more symbols with `smt [foo, bar]`
